<resources>
    <string name="app_name" translatable="false">" MaSMSestro"</string>
    <string name="action_search">Search</string>
    <string name="action_new_folder">New Folder</string>
    <string name="action_edit_folder">Edit Folder</string>
    <string name="action_delete_folder">Delete Folder</string>

    <string name="dialog_title">Delete folder</string>
    <string name="cancel">Cancel</string>

    <string name="Deleteall">Delete all SMSes and this folder?</string>
    <string name="MoveSMS">Move SMSes to Incoming and delete folder?</string>
    <string name="new_folder">New Folder</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="action_new_sms">New SMS</string>
    <string name="action_delete">Delete conversation</string>
    <string name="action_move_conv">Move conversation</string>


    <string name="action_create_rule">Create filtering rule</string>
    <string name="action_delete_sms">Delete sms</string>




    <string name="user_settings">User settings</string>
    <string name="edit_folder">Edit Folder</string>
    <string name="title_activity_sms">SMS</string>
    <string name="show_filtering_rules">Show filtering rules</string>
    <string name="search_sms">Search SMS</string>
    <string name="choose_destination_folder">Choose destination Folder:</string>
    <string name="OK">OK</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="Contact">Provide contact</string>
    <string name="rule_name">Rule name</string>
    <string name="refresh">Refresh</string>
    <string name="new_rule">New Rule</string>
    <string name="delete_rule">Delete rule</string>
    <string name="loading">Loading Conversations…</string>

</resources>
