<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mg.masmsestro.ConversationActivity">
    <item
        android:id="@+id/action_search_sms"
        android:orderInCategory="100"
        android:title= "@string/search_sms"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_sms"
        android:orderInCategory="101"
        android:title="@string/action_new_sms"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_move_conversation"
        android:orderInCategory="102"
        android:title="@string/action_move_conv"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_delete_conversation"
        android:orderInCategory="103"
        android:title="@string/action_delete"
        app:showAsAction="never" />



</menu>
