<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mg.masmsestro.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="90"
        android:title="Refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_folder"
        android:orderInCategory="101"
        android:title="@string/action_new_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_folder"
        android:orderInCategory="102"
        android:title="@string/action_edit_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_folder"
        android:orderInCategory="103"
        android:title="@string/action_delete_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rules"
        android:orderInCategory="104"
        android:title="@string/show_filtering_rules"
        app:showAsAction="never" />

    <!--
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="105"
            android:title="@string/user_settings"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_DB"
            android:orderInCategory="105"
            android:title="Manage DB"
            app:showAsAction="never" />
    -->
</menu>
